# Abdugram

./: .gitignore  Abdugram.pro  AppDirsConfig.pri  CMakeLists.txt  Functions.pri  LICENSE  LibDirsConfig.pri  README.md
AbdugramDesktop/: CMakeLists.txt
AbdugramDesktop/include/: application.h  sectimer.h  settings.h
AbdugramDesktop/include/net/: clientmessagevisitor.h  networkhandler.h
AbdugramDesktop/include/ui/: colorrepository.h  conversationside.h  hellopage.h  lineedit.h  loginpage.h  mainpage.h  mainwindow.h  messagetextedit.h  passwordlineedit.h  phonelineedit.h  registrationpage.h  searchlineedit.h  sidemenu.h  sidemenubutton.h  sidepanel.h  stackedwidget.h  welcomebutton.h
AbdugramDesktop/include/ui/components/: button.h  chatheader.h  chatlistside.h  colorrepository.h  contextmenu.h  contextmenuprivate.h  conversationside.h  drawer.h  fieldlineedit.h  headerlabel.h  iconbutton.h  mainlabel.h  messageeditside.h  messagetextedit.h  notification.h  notificationmanager.h  overlaywidget.h  passwordlineedit.h  problemwidget.h  regexes.h  roundwidget.h  scrollbar.h  searchlineedit.h  secondarylabel.h  settingswindow.h  settingswindowprivate.h  sidemenu.h  sidemenubutton.h  sidepanel.h  titlebar.h  welcomebutton.h  widget.h
AbdugramDesktop/include/ui/effects/: rippleanimation.h
AbdugramDesktop/include/ui/mv/: chatitem.h  chatlistdelegate.h  chatlistmodel.h  chatlistview.h  chatmodelitem.h  dateseparatoritem.h  document.h  founduseritem.h  lineseparatoritem.h  messageitem.h  messagelistdelegate.h  messagelistmodel.h  messagelistview.h  messagemodelitem.h  sectionseparator.h
AbdugramDesktop/include/ui/pages/: hellopage.h  loginpage.h  mainpage.h  registrationpage.h
AbdugramDesktop/include/ui/styles/: style.h
AbdugramDesktop/rcs/: images.qrc  sounds.qrc
AbdugramDesktop/rcs/qss/: style.qss  style_vars.txt
AbdugramDesktop/src/: application.cpp  main.cpp  settings.cpp
AbdugramDesktop/src/net/: clientmessagevisitor.cpp  networkhandler.cpp
AbdugramDesktop/src/ui/: button.cpp  chatheader.cpp  colorrepository.cpp  conversationside.cpp  fieldlineedit.cpp  headerlabel.cpp  hellopage.cpp  imagebutton.cpp  lineedit.cpp  loginpage.cpp  mainlabel.cpp  mainpage.cpp  mainwindow.cpp  messageside.cpp  messagetextedit.cpp  passwordlineedit.cpp  phonelineedit.cpp  problemwidget.cpp  regexes.cpp  registrationpage.cpp  rippleanimation.cpp  searchlineedit.cpp  secondarylabel.cpp  sidemenu.cpp  sidemenubutton.cpp  sidepanel.cpp  stackedwidget.cpp  textedit.cpp  welcomebutton.cpp
AbdugramDesktop/src/ui/components/: button.cpp  chatheader.cpp  chatlistside.cpp  colorrepository.cpp  contextmenu.cpp  contextmenuprivate.cpp  conversationside.cpp  drawer.cpp  fieldlineedit.cpp  headerlabel.cpp  iconbutton.cpp  mainlabel.cpp  messageeditside.cpp  messagetextedit.cpp  notification.cpp  notificationmanager.cpp  overlaywidget.cpp  passwordlineedit.cpp  phonelineedit.cpp  problemwidget.cpp  regexes.cpp  roundwidget.cpp  scrollbar.cpp  searchlineedit.cpp  secondarylabel.cpp  settingswindow.cpp  settingswindowprivate.cpp  sidemenu.cpp  sidemenubutton.cpp  sidepanel.cpp  stackedwidget.cpp  titlebar.cpp  welcomebutton.cpp  widget.cpp
AbdugramDesktop/src/ui/effects/: rippleanimation.cpp
AbdugramDesktop/src/ui/mv/: chatitem.cpp  chatlistdelegate.cpp  chatlistmodel.cpp  chatlistview.cpp  chatmodelitem.cpp  dateseparatoritem.cpp  document.cpp  founduserchatitem.cpp  founduseritem.cpp  lineseparatoritem.cpp  messageitem.cpp  messagelistdelegate.cpp  messagelistmodel.cpp  messagelistview.cpp  messagemodelitem.cpp  sectionseparator.cpp
AbdugramDesktop/src/ui/pages/: hellopage.cpp  loginpage.cpp  mainpage.cpp  registrationpage.cpp
AbdugramDesktop/src/ui/styles/: style.cpp
AbdugramLibs/logger/: CMakeLists.txt  Logger.pro
AbdugramLibs/logger/include/logger/: logger.h
AbdugramLibs/logger/src/: logfile.cpp
AbdugramLibs/net_common/: CMakeLists.txt
AbdugramLibs/net_common/include/: consts.h  fields.h  tcpsession.h
AbdugramLibs/net_common/include/messages/: createchatmessage.h  createchatresultmessage.h  loginmessage.h  messagesforwarddeclaration.h  messagevisitor.h  registermessage.h  registerstatusmessage.h  searchusersresultmessage.h  sendmessagemessage.h  sendmessageresultmessage.h
AbdugramLibs/net_common/include/net_common/: NetCommon_global.h  consts.h  datastream.h  tcpsession.h
AbdugramLibs/net_common/src/: consts.cpp  datastream.cpp  server.cpp  tcpsession.cpp  threadpool.cpp
AbdugramLibs/net_common/src/messages/: abdumessage.cpp  abdumessagefactory.cpp  createchatreply.cpp  createchatrequest.cpp  createchatresultmessage.cpp  createprivatechatrequest.cpp  isusernamefreereply.cpp  isusernamefreerequest.cpp  loginmessage.cpp  loginreply.cpp  loginrequest.cpp  loginstatusmessage.cpp  logoutreply.cpp  logoutrequest.cpp  messagereadreply.cpp  messagereadrequest.cpp  messagesupdated.cpp  registermessage.cpp  registerreply.cpp  registerrequest.cpp  searchrequest.cpp  (+10 more)
AbdugramLibs/sql_client/: CMakeLists.txt
AbdugramLibs/sql_client/include/: databaseclient.h
AbdugramLibs/sql_client/src/: chatstable.cpp  chatsview.cpp  chatuserstable.cpp  database.cpp  databaseclient.cpp  messagereadstable.cpp  messagestable.cpp  sqlquery.cpp  userstable.cpp
AbdugramLibs/sql_common/: CMakeLists.txt
AbdugramLibs/sql_common/src/: functions.cpp
AbdugramServer/: AbdugramServer.pro  CMakeLists.txt  cursedwindow.cpp  cursedwindow.h  logsviewpage.cpp  logsviewpage.h  main.cpp  mainmenupage.cpp  mainmenupage.h  serverlogger.cpp  serverlogger.h  serverwindow.cpp  serverwindow.h  titledwindow.cpp  titledwindow.h
AbdugramServer/include/net/: networkhandler.h  server.h  servermessagevisitor.h  session.h  threadpool.h
AbdugramServer/rcs/: sql.qrc
AbdugramServer/src/: main.cpp
AbdugramServer/src/net/: networkhandler.cpp  networkhandler.h  server.cpp  server.h  servermessagevisitor.cpp  servermessagevisitor.h  session.cpp  threadpool.cpp
AbdugramServer/src/ui/: cursedwindow.cpp  logsviewpage.cpp  mainmenupage.cpp  serverwindow.cpp  serverwindow.h  titledwindow.cpp  titledwindow.h
(+325 files in other folders)
